fixed bug 44699 -- IMAP does not check result param from nsIMsgAccountManager::FindServer(); r=bienvenu, alecf